kubernete/cilium/3_security/3_host-firewall/03_ccnp-control-plane-apiserver.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "control-plane-apiserver"
spec:
  description: "Allow Kubernetes API Server to Control Plane"
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
  - toPorts:
    - ports:
      - port: "6443"
        protocol: TCP
