kubernete/cilium/3_security/3_host-firewall/07_ccnp-control-plane-ssh.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "ssh"
spec:
  description: "SSH access on Control Plane"
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
  - toPorts:
    - ports:
      - port: "22"
        protocol: TCP
